--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     volumes:
       - '.:/app'
     command:  bash -c "rake db:migrate && foreman start"
+    restart: always
     environment:
       SECRET_KEY_BASE:
       RAILS_LOG_TO_STDOUT: 'true'
@@ -23,6 +24,7 @@ services:
     image: 'postgres:12.2'
     volumes:
       - 'postgres:/var/lib/postgresql/data'
+    restart: always
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -33,6 +35,7 @@ services:
     command: redis-server
     volumes:
       - 'redis:/data'
+    restart: always
 
 volumes:
   redis:
